--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ img{
         width: 100%;
         position: absolute;
         bottom: -5%;
-        display: flex;
+        flex-direction:row;
         justify-content: center;
     }
     img{
@@ -132,7 +132,7 @@ img{
         width: 50%;
         position: absolute;
         bottom: 5%;
-        display: flex;
+        flex-direction:column ;
         justify-content: center;
     }
     img{
